--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -144,7 +144,7 @@
   "Consistency Checks": "Konsistenz-Checks",
   "Convertible Loans": "Wandeldarlehen",
   "Customizable PDF Reports": "Anpassbare PDF-Reports",
-  "Unlimited Share Classes": "Unbegrenzte Aktienklassen",
+  "Unlimited Share Classes": "Unbegrenzte Anzahl Aktienklassen",
   "Transaction Filters": "Filter für Transaktionen",
   "Numbered shares": "Aktiennummern",
   "Up to 20 shareholders": "Bis zu 20 Aktionäre",
@@ -159,11 +159,11 @@
   "Unicorn": "Unicorn",
   "Cap Table Import": "Cap Table-Import",
   "Document Management": "Dokumentenverwaltung",
-  "Automated Tax Reports": "Automatische Steuerbescheinigungen",
+  "Automated Tax Reports": "Steuerbescheinigungen",
   "Multiple Administrators": "Mehrere Administratoren",
   "CSV Export": "CSV-Export",
   "Two-Factor Authentication": "Zwei-Faktor-Authentifizierung",
-  "Audit Trails": "Audit-Trail",
+  "Audit Trails": "Audit-Trails",
   "24/7 Support": "24/7-Support",
   "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. And we also know how little anyone likes to read long and difficult to understand privacy policies. So we give you a human-readable overview up-front.": "Uns ist bewusst, wie sensibel und vertraulich der Cap Table für jede Firma ist. Deshalb nehmen wir deine Privatsphäre sehr ernst. Und wir wissen auch, wie mühsam es ist, lange und schwer verständliche Datenschutzerklärungen zu lesen. Deshalb findest du hier als allererstes eine einfache, leicht verständliche Übersicht.",
   "What we collect": "Was wir sammeln",
