add founder mail (#63)
* add founder mail

* fix dot

* improve css

--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -17,7 +17,7 @@
   "Sign In": "Anmelden",
   "Try Ledgy now. It’s free.": "Jetzt mit Ledgy loslegen. Kostenlos.",
   "Still hesitating? <0>Learn more about our features</0>.": "Noch am zögern? <0>Erfahre mehr über unsere Funktionen</0>.",
-  "Or have a quick look at our <0>live Demo</0>.": "Oder wirf’ einen kurzen Blick auf unsere <0>Live-Demo</0>",
+  "Or have a quick look at our <0>live Demo</0>.": "Oder wirf’ einen kurzen Blick auf unsere <0>Live-Demo</0>.",
   "Company": "Firma",
   "Privacy": "Datenschutz",
   "Security": "Sicherheit",
