--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -133,7 +133,7 @@
   "See the demo": "Teste die Demo",
   "Screenshot of the Ledgy app": "Screenshot der Ledgy-App",
   "You’re in good company": "Du befindest dich in guter Gesellschaft",
-  "Many successful companies already use Ledgy to keep track of their share register.": "Viele erfolgreiche Unternehmen nutzen bereits Ledgy, um ihr Aktienregister zu verwalten.",
+  "Many successful companies already use Ledgy to manage their ownership.": "Viele erfolgreiche Unternehmen nutzen bereits Ledgy für die Verwaltung ihrer Beteiligungen",
   "Find out why they trust us": "Warum sie uns vertrauen",
   "Ledgy is free.": "Ledgy ist kostenlos.",
   "Our goal is to truly benefit founders at work. We want to give as many people as possible access to our online cap table solution. At our current stage, we consider it more valuable to really understand our users’ needs than adding a few numbers to our bank account. Nevertheless, we leave it open to introduce paid premium features in the future. But the basic version will always remain free of charge.": "Unser Bestreben ist, Gründern das Leben zu erleichtern. Wir wollen so vielen Menschen wie möglich unsere Cap Table-Lösung zur Verfügung stellen. In der aktuellen Phase ist es uns lieber, die Bedürfnisse unserer Nutzer zu verstehen, als ein paar Zahlen auf unser Bankkonto zu schreiben. Wir behalten uns vor, in Zukunft kostenpflichtige Premium-Funktionen einzuführen. Die Grundversion der Software wird jedoch für immer kostenlos bleiben.",
