--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -133,7 +133,7 @@
   "See the demo": "See the demo",
   "Screenshot of the Ledgy app": "Screenshot of the Ledgy app",
   "You’re in good company": "You’re in good company",
-  "Many successful companies already use Ledgy to keep track of their share register.": "Many successful companies already use Ledgy to keep track of their share register.",
+  "Many successful companies already use Ledgy to manage their ownership.": "Many successful companies already use Ledgy to manage their ownership.",
   "Find out why they trust us": "Find out why they trust us",
   "Ledgy is free.": "Ledgy is free.",
   "Our goal is to truly benefit founders at work. We want to give as many people as possible access to our online cap table solution. At our current stage, we consider it more valuable to really understand our users’ needs than adding a few numbers to our bank account. Nevertheless, we leave it open to introduce paid premium features in the future. But the basic version will always remain free of charge.": "Our goal is to truly benefit founders at work. We want to give as many people as possible access to our online cap table solution. At our current stage, we consider it more valuable to really understand our users’ needs than adding a few numbers to our bank account. Nevertheless, we leave it open to introduce paid premium features in the future. But the basic version will always remain free of charge.",
