Add logo nanochip

--- a/src/locale/vi/messages.json
+++ b/src/locale/vi/messages.json
@@ -1,6 +1,6 @@
 {
-  "Learn more about": "Learn more about",
-  "Features": "Services",
+  "Learn more about": "Tìm hiểu thêm",
+  "Features": "Dịch vụ",
   "Discover more about Ledgy": "Discover more about Ledgy",
   "Consistency": "Consistency",
   "Round Modeling": "Round Modeling",
