translate and modify

--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -21,8 +21,8 @@
   "Company": "Company",
   "Privacy": "Privacy",
   "Security": "Security",
-  "Contact & Imprint": "Contact & Imprint",
-  "Product": "Product",
+  "Contact Us": "Contact Us",
+  "Products": "Products",
   "Build trust in your cap table": "Build trust in your cap table",
   "Manage your Cap Table, not your Excel! Ledgy is the single place to track the complete history of your shares, manage your ESOPs and model detailed financing rounds. Enjoy a guaranteed error-free cap table and engage your investors and employees. Try Now For Free!": "Manage your Cap Table, not your Excel! Ledgy is the single place to track the complete history of your shares, manage your ESOPs and model detailed financing rounds. Enjoy a guaranteed error-free cap table and engage your investors and employees. Try Now For Free!",
   "cap table, stock ledger, share register, startup, round modeling, equity, esop, reporting, investors": "cap table, stock ledger, share register, startup, round modeling, equity, esop, reporting, investors",
@@ -47,7 +47,7 @@
   "Your email": "Your email",
   "Your message": "Your message",
   "Send message": "Send message",
-  "Imprint": "Imprint",
+  "Head Office": "Head Office",
   "Switzerland": "Switzerland",
   "VAT number": "VAT number",
   "Managing directors": "Managing directors",
@@ -194,7 +194,7 @@
   "Please <0>get in touch with us</0>": "Please <0>get in touch with us</0>",
   "At Ledgy we take your security seriously. Strong passwords, robust encryption, two-factor authentication, and permanent code reviews are among our high safety standards. Find out more about why you can have peace-of-mind while managing your cap table with Ledgy.": "At Ledgy we take your security seriously. Strong passwords, robust encryption, two-factor authentication, and permanent code reviews are among our high safety standards. Find out more about why you can have peace-of-mind while managing your cap table with Ledgy.",
   "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. Here is what we do to protect your data.": "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. Here is what we do to protect your data.",
-  "Strong passwords": "Strong passwords",
+  "Strong passwords": "Strong passwords", 
   "Users have to set a <0>secure password</0>": "Users have to set a <0>secure password</0>",
   "Password encryption": "Password encryption",
   "Stored encrypted with the battle-tested <0>bcrypt algorithm</0>": "Stored encrypted with the battle-tested <0>bcrypt algorithm</0>",
@@ -209,5 +209,11 @@
   "Content-Security-Policy": "Content-Security-Policy",
   "HTTP headers prevent cross-site scripting and code injection (<0>A+ rating</0>)": "HTTP headers prevent cross-site scripting and code injection (<0>A+ rating</0>)",
   "Daily backups ensure nothing is ever lost": "Daily backups ensure nothing is ever lost",
-  "If you have any questions or discover anything suspicious, please <0>get in touch with us</0>.": "If you have any questions or discover anything suspicious, please <0>get in touch with us</0>."
+  "If you have any questions or discover anything suspicious, please <0>get in touch with us</0>.": "If you have any questions or discover anything suspicious, please <0>get in touch with us</0>.",
+  "Address": "Address",
+  "Mezzanine floor An Phu Plaza":"Mezzanine floor An Phu Plaza", 
+  "117-119 Ly Chinh Thang, Ward 7, Dist. 3": "117-119 Ly Chinh Thang, Ward 7, Dist. 3",
+  "Ho Chi Minh City, Vietnam": "Ho Chi Minh City, Vietnam",
+  "Shop":"Shop",
+  "Connect with us:":"Connect with us:"
 }
