--- a/src/locale/vi/messages.json
+++ b/src/locale/vi/messages.json
@@ -12,7 +12,7 @@
   "Enter your email…": "Enter your email…",
   "Oops. This email address is invalid.": "Oops. This email address is invalid.",
   "Pricing": "Pricing",
-  "About us": "About us",
+  "About us": "Về chúng tôi",
   "Blog": "Blog",
   "Sign In": "Sign In",
   "Try Ledgy now. It’s free.": "Try Ledgy now. It’s free.",
@@ -21,8 +21,8 @@
   "Company": "Company",
   "Privacy": "Privacy",
   "Security": "Security",
-  "Contact & Imprint": "Contact & Imprint",
-  "Product": "Product",
+  "Contact Us": "Liên hệ",
+  "Products": "Sản phẩm",
   "Build trust in your cap table": "Build trust in your cap table",
   "Manage your Cap Table, not your Excel! Ledgy is the single place to track the complete history of your shares, manage your ESOPs and model detailed financing rounds. Enjoy a guaranteed error-free cap table and engage your investors and employees. Try Now For Free!": "Manage your Cap Table, not your Excel! Ledgy is the single place to track the complete history of your shares, manage your ESOPs and model detailed financing rounds. Enjoy a guaranteed error-free cap table and engage your investors and employees. Try Now For Free!",
   "cap table, stock ledger, share register, startup, round modeling, equity, esop, reporting, investors": "cap table, stock ledger, share register, startup, round modeling, equity, esop, reporting, investors",
@@ -40,16 +40,16 @@
   "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala": "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala",
   "Investor & Consultant (Farmy.ch, Flatfox.ch), Founder of Students.ch": "Investor & Consultant (Farmy.ch, Flatfox.ch), Founder of Students.ch",
   "M&A and Private Equity Lawyer with a focus on start-up legal advise, Smartuplaw.ch": "M&A and Private Equity Lawyer with a focus on start-up legal advise, Smartuplaw.ch",
-  "Contact": "Contact",
+  "Contact": "Liên hệ",
   "Let’s Get In Touch": "Let’s Get In Touch",
   "Here are the ways you can contact us with any questions you have": "Here are the ways you can contact us with any questions you have",
   "Your name": "Your name",
   "Your email": "Your email",
   "Your message": "Your message",
   "Send message": "Send message",
-  "Imprint": "Imprint",
+  "Head Office": "Văn phòng chính",
   "Switzerland": "Switzerland",
-  "VAT number": "VAT number",
+  "VAT number": "Mã số thuế",
   "Managing directors": "Managing directors",
   "Track the complete history of your shares. Integrated consistency checks will guarantee that your cap table is error-free.": "Track the complete history of your shares. Integrated consistency checks will guarantee that your cap table is error-free.",
   "Guaranteed error-free": "Guaranteed error-free",
@@ -209,5 +209,12 @@
   "Content-Security-Policy": "Content-Security-Policy",
   "HTTP headers prevent cross-site scripting and code injection (<0>A+ rating</0>)": "HTTP headers prevent cross-site scripting and code injection (<0>A+ rating</0>)",
   "Daily backups ensure nothing is ever lost": "Daily backups ensure nothing is ever lost",
-  "If you have any questions or discover anything suspicious, please <0>get in touch with us</0>.": "If you have any questions or discover anything suspicious, please <0>get in touch with us</0>."
+  "If you have any questions or discover anything suspicious, please <0>get in touch with us</0>.": "If you have any questions or discover anything suspicious, please <0>get in touch with us</0>.",
+  "Address": "Địa chỉ",
+  "Mezzanine floor An Phu Plaza": "Tầng lửng tòa nhà An Phú Plaza",
+  "117-119 Ly Chinh Thang, Ward 7, Dist. 3": "117-119 Lý Chính Thắng, Phường 7, Quận 3",
+  "Ho Chi Minh City, Vietnam": "Thành phố Hồ Chí Minh, Việt Nam",
+  "Infomation":"Thông tin liên hệ",
+  "Shop":"Cửa hàng",
+  "Connect with us:": "Kết nối với chúng tôi:"
 }
